# MartletMolt

./: .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG_API_DOCS.md  Dockerfile  Makefile  PROJECT_MAP.md  README.md  docker-compose.yml  martlet.py  orchestrator.py  pyproject.toml  requirements.txt  run_a.py  run_b.py
Templates/: settings.yaml.example
backend/: README.md  __init__.py
backend/system_a/: __init__.py
config_templates/: .env.example  README.md  good_example.yaml  settings.yaml.example
docs/: AI_CONTEXT.md  AI_OPERATIONS.md  API_SDK.md  ARCHITECTURE.md  EXTERNAL_DEVICE_CONNECTION.md  PROJECT_MAP.md  yaml_tools_guide.md
docs/api/: CHANGELOG.md  README.md  config.yaml
docs/plan/: dual_container_architecture.md  skills_plan.md
docs/task/: SOP.md  TASK-001_Anthropic_Provider_Implementation.md  TASK-002_Tool_Parameter_Validation.md  TASK-008_Skills_Learning_System.md  TASK-012_Session_Renaming.md  TASK-013_File_Upload_System.md  TASK-015_Gemini_Provider_Implementation.md  TASK-ARCH-001_Bridge_and_Proxy_Protocol.md  TASK-ARCH-004_Security_Policy_Guards.md  TASK-CORE-007_Stability_Construction.md  TASK-ORC-01_Orchestrator_Audit.md  TASK-ORC-02_Smart_Syncer.md  TASK-ORC-03_Reverse_Proxy.md  TASK-TS-Molt-001_Phoenix_Foundation.md  TASK-WEB-ADV_Web_Lite_V2_Advanced_Features.md  TASK-WEB-FIX-001_Remote_WS_Connection_Issue.md  TASK_LIST.md  TASK_LIST_V2.md  TASK_streaming_buffer.md  TASK_web_connectivity_and_channel_sync.md  TASK_web_lite_v2_advanced_features.md
docs/templates/: api_sdk.md.j2
frontend/: README.md  web-lite-v2-implementation-summary.md
frontend/web-lite/: README.md  config.py  main.py  routes.py
frontend/web-lite-v2/: README.md  main.py
orchestrator/: README.md  __init__.py  config.py  health_check.py  main.py  manager.py  orchestrator_server.py  proxy.py  state.py  switcher.py  sync.py
scripts/: README.md  generate_device_key.py  simulate_evolution.py  start_services.sh  sync_systems.py  validate_yaml.py
shared/: README.md
shared/config/: settings.yaml
shared/templates/: chat.html  index.html
skills/: README.md
skills/api-docs-generator/: SKILL.md
skills/hello-world/: SKILL.md
skills/python-reviewer/: SKILL.md
state/: state.json
system_a/: __init__.py
system_b/: __init__.py
tests/: __init__.py  conftest.py  test_channel_web.py  test_config.py  test_gateway.py  test_orc_proxy.py  test_orc_sync.py  test_provider_ollama.py  test_session.py  test_stream_buffer.py  test_tool_file.py  test_tool_shell.py
tools/: README.md  generate_api_docs.py  test_doc_generator.py
(+124 files in other folders)
