[project]
name = "martlet-molt"
version = "0.1.0"
description = "A Self-Evolving AI Agent System with A/B Architecture"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Nate Yeh", email = "nate@example.com" }
]
keywords = ["ai", "agent", "automation", "self-evolving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "playwright>=1.48.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "psutil>=6.0.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pyright>=1.1.0",
    "mypy>=1.11.0",
]

[project.scripts]
martlet-a = "system_a.martlet_molt.cli:main"
martlet-b = "system_b.martlet_molt.cli:main"
orchestrator = "orchestrator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator", "system_a", "system_b"]

[tool.hatch.build.targets.sdist]
include = [
    "orchestrator/",
    "system_a/",
    "system_b/",
    "shared/",
    "state/",
    "docs/",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 180

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["martlet_molt", "orchestrator"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]